# converter

./: .gitignore  CMakeLists.txt  Makefile  README.md  toolchain-gcc.cmake  toolchain-mingw.cmake
cmd/: CMakeLists.txt
cmd/src/: main.cpp
converter/: CMakeLists.txt
converter/src/: converter.cpp  converter.hpp
converter/src/app/: app.cpp  app.hpp
converter/src/cli/: cli.cpp  cli.hpp
converter/src/core/: assert.hpp  core.hpp  entry_point.hpp  platform_detecction.hpp
converter/src/epub/: epub.cpp
converter/src/log/: log.cpp  log.hpp
converter/src/pdf/: pdf.hpp
scripts/: libraries.json  setup.py
src/: main.cpp
src/libs/epub/: epub.hpp
src/libs/pdf/: pdf.hpp
src/libs/spdlog/: spdlog.hpp
tests/: CMakeLists.txt  Catch.cmake
